--- a/index.html
+++ b/index.html
@@ -11,24 +11,66 @@
 <body>
     <header class="header">
         <section class="section" id="headerSection1">
-            <div class="contanier mb-5">
+            <div class="contanier">
                 <div class="row">
-                    <div class="col-lg-4">
-                        <h1 class="heading">FwCj</h1>
-                    </div>
-                        <nav class="nav d-none d-lg-flex main-nav justify-content-lg-center" id="mainNav">
-                            <a href="#" class="nav-link text-uppercase">about</a>
-                            <a href="#" class="nav-link text-uppercase">events</a>
-                            <a href="#" class="nav-link text-uppercase">menu</a>
-                            <a href="#" class="nav-link text-uppercase">gallery</a>
-                            <a href="#" class="nav-link text-uppercase">contacts</a>
-                            <a href="#" class="nav-link text-uppercase">blog</a>
-                        </nav>
+                    <div class="col-lg-8">
+                        <div class="drop-down-div d-lg-none">
+                            <div class="dropdown text-end text-sm-end mt-5">
+                                <button class="btn dropdown-btn dropdowntoggle btn-outline-danger"
+                                type="button" 
+                                role="button"
+                                data-bs-toggle="dropdown" 
+                                aria-expanded="false"
+                                >tap</button>
+                                <ul class="dropdown-menu ">
+                                    <li>
+                                        <a href="index.html" class="dropdown-item">Home</a>
+                                    </li>
+                                    <li>
+                                        <a href="about.html" class="dropdown-item">About</a>
+                                    </li>
+                                    <li>
+                                        <a href="myproject.html" class="dropdown-item">Project</a>
+                                    </li>
+                                    <li>
+                                        <a href="#" class="dropdown-item">Sports</a>
+                                    </li>
+                                    <li>
+                                        <a href="#" class="dropdown-item">Gaming</a>
+                                    </li>
+                                    <li>
+                                        <a href="#" class="dropdown-item">Reading</a>
+                                    </li>
+                                    <li>
+                                        <a href="#" class="dropdown-item">TvShows</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
         <section class="section" id="headerSection2">
+            <div class="contanier mb-5">
+                <div class="row">
+                    <div class="col-lg-4">
+                        <h1 class="heading">ClintPage</h1>
+                    </div>
+                        <nav class="nav d-none d-lg-flex main-nav justify-content-lg-center" id="mainNav">
+                            <a href="index.html" class="header-link nav-link text-uppercase">Home</a>
+                            <a href="about.html" class="header-link nav-link text-uppercase">About</a>
+                            <a href="myproject.html" class="header-link nav-link text-uppercase">project</a>
+                            <a href="#" class="header-link nav-link text-uppercase">sports</a>
+                            <a href="#" class="header-link nav-link text-uppercase">Gaming</a>
+                            <a href="#" class="header-link nav-link text-uppercase">Reading</a>
+                            <a href="#" class="header-link nav-link text-uppercase">Tvshow</a>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="section" id="headerSection3">
             <div class="container">
                 <nav class="nav justify-content-center justify-content-md-end">
                     <a href="#" class="nav-link social-link">
@@ -54,34 +96,6 @@
                 </nav>
             </div>
         </section>
-        <!-- <section class="section" id="Section">
-            <div class="container mb-5">
-                <div class="row">
-                    <div class="col-md-6">
-                        <h1 class="heading">FwCj</h1>
-                    </div>
-                    <div class="col-md-6">
-                        <ul class="nav justify-content-center justify-content-between">
-                            <li>
-                                <a href="#" class="nav-link">about</a>
-                            </li>
-                            <li>
-                                <a href="#" class="nav-link">sports</a>
-                            </li>
-                            <li>
-                                <a href="#" class="nav-link">gaming</a>
-                            </li>
-                            <li>
-                                <a href="#" class="nav-link">Reading</a>
-                            </li>
-                            <li>
-                                <a href="#" class="nav-link">tvShows</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div> -->
-        </section>
     </header>
     <main class="main">
         <section class="section" id="Section1">
@@ -91,7 +105,7 @@
                         <img src="images/IMG_2689.jpg"alt="placeholder img" class="img-fluid image w-100" />
                     </div>
                     <div class="col-md-6 d-flex align-items-center">
-                        <p class="img-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus quaerat repudiandae molestias. Magni, id laboriosam accusantium deleniti aspernatur nulla ea temporibus amet reiciendis repudiandae delectus repellendus tempore eveniet ut odit numquam dolores nemo natus quo. Iure deserunt error at quasi dolore neque sequi molestiae, sint magnam inventore distinctio mollitia earum aspernatur adipisci eos fugiat accusantium atque quidem tempora porro reiciendis soluta facere provident! Atque nihil ea modi delectus blanditiis incidunt voluptatibus ut, commodi obcaecati ducimus omnis explicabo nobis enim quo laudantium fugiat corporis, eos laboriosam. Voluptate dicta voluptas vitae, pariatur doloribus labore vel ipsa, est quas odio saepe dolore aliquam?</p>
+                        <p class="img-text">Hey welcome to my web page my name is clint Jackson and i'm current junior developer at mississippi coding academy and this is going to be my first web page that I do on my own so this page will be a working project which mean it not going to look the best but I will be making changes and imporve this page as I grow as a junior developer.So far what I learn at the coding academy is <span class="learn">HTML5 CSS BOOTSTRAP</span>.On this page your going to learn little about me some of my work I have done at ms coding academy hope yall yall like my hope</p>
                     </div>
                 </div>
             </div>
@@ -103,25 +117,25 @@
                         <h2>
                             <a href="#"class=" social-link nav-link text-center fw-bold">Sports</a>
                         </h2>
-                        <img src="images/dave-adamson--nATH0CrkMU-unsplash.jpg"alt="placeholder img" class="img-fluid image rounded mx-auto mb-3 w-100" />
+                        <img src="images/dave-adamson--nATH0CrkMU-unsplash.jpg"alt=" a football laying on green football field" class="img-fluid image rounded mx-auto mb-3 w-100" />
                     </div>
                             <div class="col-md-3">
                                 <h2>
                                     <a href="#"class=" social-link nav-link text-center fw-bold">Gaming</a>
                                 </h2>
-                                <img src="images/fabio-magalhaes-nmTm7knUnqs-unsplash.jpg"alt="placeholder img" class="img-fluid image rounded mx-auto mb-3 w-100" />
+                                <img src="images/fabio-magalhaes-nmTm7knUnqs-unsplash.jpg"alt=" a gaming monitor in a dark room with purple led lights" class="img-fluid image rounded mx-auto mb-3 w-100" />
                             </div>
                             <div class="col-md-3">
                                 <h2>
                                     <a href="#"class=" social-link nav-link text-center fw-bold">Reading</a>
                                 </h2>
-                                    <img src="images/miika-laaksonen-nUL9aPgGvgM-unsplash.jpg"alt="placeholder img" class="img-fluid image rounded mx-auto mb-3 w-100" />
+                                    <img src="images/miika-laaksonen-nUL9aPgGvgM-unsplash.jpg"alt=" an manga book with black and white writing and drawing" class="img-fluid image rounded mx-auto mb-3 w-100" />
                             </div>
                             <div class="col-md-3">
                                 <h2>
                                     <a href="#"class=" social-link nav-link text-center fw-bold">Tvshows</a>
                                 </h2>
-                                    <img src="images/tech-daily-cF6Le-0viHY-unsplash.jpg"alt="placeholder img" class="img-fluid image rounded mx-auto mb-3 w-100" />
+                                    <img src="images/oscar-nord-Sd87V72cJEU-unsplash.jpg"alt="an tv place on a white background" class="img-fluid image rounded mx-auto mb-3 w-100" />
                             </div>
                         </ul>
                     </div>
@@ -140,25 +154,6 @@
                             </li>
                             <li>
                                 clintjackson601@gmail.com
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="col-md-6">
-                        <ul class="nav justify-content-end">
-                            <li>
-                                <a href="#"class="nav-link"><i class="bi bi-instagram"></i>instagram</a>
-                            </li>
-                            <li>
-                                <a href="#"class="nav-link"><i class="bi bi-twitter"></i>twitter</a>
-                            </li>
-                            <li>
-                                <a href="#"class="nav-link"><i class="bi bi-github"></i>github</a>
-                            </li>
-                            <li>
-                                <a href="#"class="nav-link"><i class="bi bi-linkedin"></i>linkin</a>
-                            </li>
-                            <li>
-                                <a href="#"class="nav-link"><i class="bi bi-facebook"></i>facebook</a>
                             </li>
                         </ul>
                     </div>
