--- a/myproject.html
+++ b/myproject.html
@@ -20,10 +20,10 @@
                             <a href="index.html" class="header-link nav-link text-uppercase">Home</a>
                             <a href="about.html" class="header-link nav-link text-uppercase">About</a>
                             <a href="myproject.html" class="header-link nav-link text-uppercase">project</a>
-                            <a href="#" class="header-link nav-link text-uppercase">sports</a>
-                            <a href="#" class="header-link nav-link text-uppercase">Gaming</a>
-                            <a href="#" class="header-link nav-link text-uppercase">Reading</a>
-                            <a href="#" class="header-link nav-link text-uppercase">Tvshow</a>
+                            <a href="sports.html" class="header-link nav-link text-uppercase">sports</a>
+                            <a href="gaming.html" class="header-link nav-link text-uppercase">Gaming</a>
+                            <a href="reading.html" class="header-link nav-link text-uppercase">Reading</a>
+                            <a href="tvshows.html" class="header-link nav-link text-uppercase">Tvshow</a>
                         </nav>
                     </div>
                 </div>
@@ -108,12 +108,12 @@
             <div class="row">
                 <div class="col-md-6">
                     <h2 class="footerheading">contacts</h2>
-                    <ul class="list-unstyled">
+                    <ul class=" myContacts list-unstyled">
                         <li>
-                            601-918-7211
+                            <a href="tel:6019187211">Call me <span class="icon"><i class="bi bi-emoji-kiss"></i></span></a>
                         </li>
                         <li>
-                            clintjackson601@gmail.com
+                            <a href="mailto:clintjackson601@gmail.com">Email: clintjackson601@gmail.com</a>
                         </li>
                     </ul>
                 </div>
