--- a/sports.html
+++ b/sports.html
@@ -30,7 +30,7 @@
                             data-bs-dismiss="offcanvas"
                             aria-label="Close">
                         </button>
-                        <ul class="offcanvas-menu">
+                        <ul class="offcanvas-menu list-unstyled">
                             <li>
                                 <a href="index.html" class="offcanvas-item">Home</a>
                             </li>
@@ -137,48 +137,61 @@
             </div>
         </section>
     </header>
-    <main class="main">
+    <main class="main" id="main">
         <section class="section" id="Section1">
-            <div class="container mb-5">
+            <div class="container">
+                <h2 class="main-heading text-center">My Favorite Sports</h2>
                 <div class="row">
-                    <div class="col-md-5">
-                        <img src="images/IMG_2689.jpg"alt="placeholder img" class="img-fluid image w-100" />
+                    <div class="col-md-6">
+                        <figure class="figure">
+                            <img src="images/chris-chow-zVmuTzhmvXY-unsplash.jpg"alt="an image of football player taking down opposing team" class="img-fluid image w-100 figure-img" />
+                            <figcaption class="figure-caption">Football is a great sport the best if you ask me and it the only I had played in highschool</figcaption>
+                        </figure>
                     </div>
-                    <div class="col-md-6 d-flex align-items-center">
-                        <p class="img-text">Hey welcome to my web page my name is clint Jackson and i'm current junior developer at mississippi coding academy and this is going to be my first web page that I do on my own so this page will be a working project which mean it not going to look the best but I will be making changes and imporve this page as I grow as a junior developer.So far what I learn at the coding academy is <span class="learn">HTML5 CSS BOOTSTRAP</span>.On this page your going to learn little about me some of my work I have done at ms coding academy hope yall yall like my hope</p>
+                    <div class="col-md-6">
+                        <h2 class="text-center">FootBall</h2>
+                        <p class="img-text text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi atque voluptatem officia. Fuga, eligendi. Culpa, eaque. Provident fuga sapiente consequatur.</p>
+                        <p class="img-text text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi atque voluptatem officia. Fuga, eligendi. Culpa, eaque. Provident fuga sapiente consequatur.</p>
+                    </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <figure class="figure">
+                                    <img src="images/pablo-rebolledo-h8sl-oNcat0-unsplash.jpg"alt="an image of two mma fighters fighting to came victory" class="img-fluid image w-100" />
+                                    <figcaption class="figure-caption">MMA is mixed martial arts that allow a variety of fighting style where there is know debate about it been the superior combat sport</figcaption>
+                                    </figure>
+                                </div>
+                                    <div class="col-md-6">
+                                        <h2 class="text-center">MMA</h2>
+                                        <p class="img-text text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, provident eos facilis veniam consequatur dolores amet optio aut quam porro.</p>
+                                        <p class="img-text text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem libero velit obcaecati vel praesentium et optio, esse officia beatae odio?</p>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                        <div class="col-md-6">
+                                            <figure class="figure">
+                                                <img src="images/courtney-cook-h7aVq-7FfPw-unsplash.jpg"alt="an image of a man in a  lime green shirt on a golf feld swinging gis golf club" class="img-fluid image w-100" />
+                                                <figcaption class="figure-caption">Golf is a sport that I thought I'll never like but one day I gave it a try and in up liking it and it a nice relaxing sport you can play by yourself or with some friends</figcaption>
+                                            </figure>
+                                        </div>
+                                        <div class="col-md-6">
+                                                    <h2 class="text-center">Golf</h2>
+                                                <p class="img-text text-center">Golf is a sport that I thought I'll never like but one day I gave it a try and in up liking it and it a nice relaxing sport you can play by yourself or with some friends </p>
+                                                <p class="img-text text-center">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure itaque numquam deserunt. Repellat, tempore! Possimus veniam ratione sunt accusantium cumque labore porro illum expedita. Doloribus iste nihil est sit soluta.</p>
+                                            </div>
+                                </div>
+                            </div>
+                        </div>
+                    <div class="sp-boxes" id="spBox4">
+                        <div class="col-md-5">
+                            <h2>skateboarding</h2>
+                                <img src="images/josh-hild-igLQW_yY9oo-unsplash.jpg"alt="an image of a man in mid air on a skateboard" class="img-fluid image w-100" />
+                        </div>
+                        <div class="col-md-6 d-flex align-items-center">
+                                <p class="img-text">skateboarding is a sport that I pick up when i was a little boy and my uncle thought me how to skateboard a little and I in up loving the spor since then</p>
+                            </div>
                     </div>
                 </div>
-            </div>
-        </section>
-        <section class="section" id="Section2">
-            <div class="container mb-5">
-                <div class="row">
-                    <div class="col-md-3">
-                        <h2>
-                            <a href="sports.html"class=" social-link nav-link text-center fw-bold">Sports</a>
-                        </h2>
-                        <img src="images/dave-adamson--nATH0CrkMU-unsplash.jpg"alt=" a football laying on green football field" class="img-fluid image rounded mx-auto mb-3 w-100" />
-                    </div>
-                            <div class="col-md-3">
-                                <h2>
-                                    <a href="gaming.html"class=" social-link nav-link text-center fw-bold">Gaming</a>
-                                </h2>
-                                <img src="images/fabio-magalhaes-nmTm7knUnqs-unsplash.jpg"alt=" a gaming monitor in a dark room with purple led lights" class="img-fluid image rounded mx-auto mb-3 w-100" />
-                            </div>
-                            <div class="col-md-3">
-                                <h2>
-                                    <a href="reading.html"class=" social-link nav-link text-center fw-bold">Reading</a>
-                                </h2>
-                                    <img src="images/miika-laaksonen-nUL9aPgGvgM-unsplash.jpg"alt=" an manga book with black and white writing and drawing" class="img-fluid image rounded mx-auto mb-3 w-100" />
-                            </div>
-                            <div class="col-md-3">
-                                <h2>
-                                    <a href="tvshows.html"class=" social-link nav-link text-center fw-bold">Tvshows</a>
-                                </h2>
-                                    <img src="images/oscar-nord-Sd87V72cJEU-unsplash.jpg"alt="an tv place on a white background" class="img-fluid image rounded mx-auto mb-3 w-100" />
-                            </div>
-                        </ul>
-                    </div>
             </div>
         </section>
     </main>
