--- a/about.html
+++ b/about.html
@@ -117,14 +117,14 @@
                 <div class="row">
                     <div class="col-md-6">
                         <h2 class="footerheading">contacts</h2>
-                        <ul class="list-unstyled">
-                            <li>
-                                601-918-7211
-                            </li>
-                            <li>
-                                clintjackson601@gmail.com
-                            </li>
-                        </ul>
+                    <ul class=" myContacts list-unstyled">
+                        <li>
+                            <a href="tel:6019187211">Call me <span class="icon"><i class="bi bi-emoji-kiss"></i></span></a>
+                        </li>
+                        <li>
+                            <a href="mailto:clintjackson601@gmail.com">Email: clintjackson601@gmail.com</a>
+                        </li>
+                    </ul>
                     </div>
                 </div>
             </div>
