--- a/sports.html
+++ b/sports.html
@@ -54,38 +54,6 @@
                             </li>
                         </ul>
                     </div>
-                        <!-- <div class="drop-down-div d-lg-none">
-                            <div class="dropdown text-end text-sm-end mt-5">
-                                <button class="btn dropdown-btn dropdowntoggle btn-outline-danger"
-                                type="button" 
-                                role="button"
-                                data-bs-toggle="dropdown" 
-                                aria-expanded="false"
-                                >tap</button>
-                                <ul class="dropdown-menu ">
-                                    <li>
-                                        <a href="index.html" class="dropdown-item">Home</a>
-                                    </li>
-                                    <li>
-                                        <a href="about.html" class="dropdown-item">About</a>
-                                    </li>
-                                    <li>
-                                        <a href="myproject.html" class="dropdown-item">Project</a>
-                                    </li>
-                                    <li>
-                                        <a href="#" class="dropdown-item">Sports</a>
-                                    </li>
-                                    <li>
-                                        <a href="#" class="dropdown-item">Gaming</a>
-                                    </li>
-                                    <li>
-                                        <a href="#" class="dropdown-item">Reading</a>
-                                    </li>
-                                    <li>
-                                        <a href="#" class="dropdown-item">TvShows</a>
-                                    </li>
-                                </ul>
-                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -145,13 +113,13 @@
                     <div class="col-md-6">
                         <figure class="figure">
                             <img src="images/chris-chow-zVmuTzhmvXY-unsplash.jpg"alt="an image of football player taking down opposing team" class="img-fluid image w-100 figure-img" />
-                            <figcaption class="figure-caption">Football is a great sport the best if you ask me and it the only I had played in highschool</figcaption>
+                            <figcaption class="figure-caption"> American football is a team sport played by two teams of eleven players on a rectangular field with goalposts at each end where both team are trying get the ball to the endzone to score points.</figcaption>
                         </figure>
                     </div>
                     <div class="col-md-6">
                         <h2 class="text-center">FootBall</h2>
-                        <p class="img-text text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi atque voluptatem officia. Fuga, eligendi. Culpa, eaque. Provident fuga sapiente consequatur.</p>
-                        <p class="img-text text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi atque voluptatem officia. Fuga, eligendi. Culpa, eaque. Provident fuga sapiente consequatur.</p>
+                        <p class="img-text text-center">Football is the best sport if you ask me it a sport where boys become men </p>
+                        <p class="img-text text-center">Football is one of the sports I played during my teens I played football in middle school and high school. My positions in middle school I was right guard and in high school I was a nose guard. Nose guard was my favorite positions in high school I also started on the varsity team in my freshmen year.</p>
                     </div>
                         </div>
                         <div class="row">
@@ -163,36 +131,38 @@
                                 </div>
                                     <div class="col-md-6">
                                         <h2 class="text-center">MMA</h2>
-                                        <p class="img-text text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, provident eos facilis veniam consequatur dolores amet optio aut quam porro.</p>
-                                        <p class="img-text text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem libero velit obcaecati vel praesentium et optio, esse officia beatae odio?</p>
+                                        <p class="img-text text-center">My uncel is the one who got me into watching combat sport it started off with boxing where will watch ever fight on tv then we started to MMA fights where it quickly become of favorite combat sport</p>
+                                        <p class="img-text text-center">Some of my favorite MMA fighters are Jon Jones, Anderson Silva, Demetrious Johnson aka Mighty Mouse, and Alex Pereira</p>
                                     </div>
                                 </div>
                                 <div class="row">
                                         <div class="col-md-6">
                                             <figure class="figure">
                                                 <img src="images/courtney-cook-h7aVq-7FfPw-unsplash.jpg"alt="an image of a man in a  lime green shirt on a golf feld swinging gis golf club" class="img-fluid image w-100" />
-                                                <figcaption class="figure-caption">Golf is a sport that I thought I'll never like but one day I gave it a try and in up liking it and it a nice relaxing sport you can play by yourself or with some friends</figcaption>
+                                                <figcaption class="figure-caption">Golf is a club and ball sport in which players use various clubs to hit a ball into a series of holes on a course in as few strokes as possible.</figcaption>
                                             </figure>
                                         </div>
                                         <div class="col-md-6">
                                                     <h2 class="text-center">Golf</h2>
                                                 <p class="img-text text-center">Golf is a sport that I thought I'll never like but one day I gave it a try and in up liking it and it a nice relaxing sport you can play by yourself or with some friends </p>
-                                                <p class="img-text text-center">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure itaque numquam deserunt. Repellat, tempore! Possimus veniam ratione sunt accusantium cumque labore porro illum expedita. Doloribus iste nihil est sit soluta.</p>
+                                                <p class="img-text text-center">So far I love to play rooftop golf and miniature golf</p>
                                             </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <figure class="figure">
+                                            <img src="images/josh-hild-igLQW_yY9oo-unsplash.jpg"alt="an image of a man in mid air on a skateboard" class="img-fluid image w-100" />
+                                            <figcaption class="figure-caption">skateboarding  is an action sport that involves riding and performing tricks using a skateboard.</figcaption>
+                                        </figure>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <h2 class="text-center">skateboarding</h2>
+                                            <p class="img-text text-center">skateboarding is a sport that I pick up when i was a little boy and my uncle thought me how to skateboard a little and I in up loving the spor since then</p>
+                                            <p class="img-text text-center">Some of my favorite skaters are the goat himself Tony Hawk,Nyjah Huston, and Yuto Horigome </p>
+                                        </div>
                                 </div>
                             </div>
                         </div>
-                    <div class="sp-boxes" id="spBox4">
-                        <div class="col-md-5">
-                            <h2>skateboarding</h2>
-                                <img src="images/josh-hild-igLQW_yY9oo-unsplash.jpg"alt="an image of a man in mid air on a skateboard" class="img-fluid image w-100" />
-                        </div>
-                        <div class="col-md-6 d-flex align-items-center">
-                                <p class="img-text">skateboarding is a sport that I pick up when i was a little boy and my uncle thought me how to skateboard a little and I in up loving the spor since then</p>
-                            </div>
-                    </div>
-                </div>
-            </div>
         </section>
     </main>
     <footer class="footer" id="footer">
